Change in Folder Structure

--- a/english_module/Colab Notebooks/Sign_Language_Recognition.ipynb
+++ b/english_module/Colab Notebooks/Sign_Language_Recognition.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: tensorflow in /usr/local/lib/python3.9/dist-packages (2.11.0)\n",
@@ -88,9 +72,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!nvidia-smi"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -98,11 +80,10 @@
         "id": "Dh5z_TEK3xbX",
         "outputId": "acc216f1-519a-44ca-d28d-0a5db2f9e4ce"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Sat Mar 18 06:39:50 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
@@ -126,14 +107,14 @@
             "+-----------------------------------------------------------------------------+\n"
           ]
         }
+      ],
+      "source": [
+        "!nvidia-smi"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -141,19 +122,27 @@
         "id": "jo92x2tW8VOW",
         "outputId": "9f9f813c-98cb-4809-bad3-eeff35209760"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6ORDvHqi4dLh"
+      },
+      "outputs": [],
       "source": [
         "# Part 1 - Building the CNN\n",
         "#importing the Keras libraries and packages\n",
@@ -168,134 +157,125 @@
         "\n",
         "#Input Image Size\n",
         "sz=300"
-      ],
-      "metadata": {
-        "id": "6ORDvHqi4dLh"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Initialing the CNN\n",
-        "classifier = Sequential()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "LO1t6agDmncq"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Initialing the CNN\n",
+        "classifier = Sequential()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Step 1 - Convolutio Layer \n",
-        "classifier.add(Convolution2D(32, (3,3) , input_shape = (sz, sz,3), activation = 'relu'))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "u3Iq14Ycmt58"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Step 1 - Convolutio Layer \n",
+        "classifier.add(Convolution2D(32, (3,3) , input_shape = (sz, sz,3), activation = 'relu'))"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#step 2 - Pooling\n",
-        "classifier.add(MaxPooling2D(pool_size =(2,2)))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "nNKdOWJOmuAv"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#step 2 - Pooling\n",
+        "classifier.add(MaxPooling2D(pool_size =(2,2)))"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Ysx_pralm5qG"
+      },
+      "outputs": [],
       "source": [
         "# Adding second convolution layer\n",
         "classifier.add(Convolution2D(32, (3,3) , activation = 'relu'))\n",
         "classifier.add(MaxPooling2D(pool_size =(2,2)))"
-      ],
-      "metadata": {
-        "id": "Ysx_pralm5qG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7JuZkiKOm56R"
+      },
+      "outputs": [],
       "source": [
         "#Adding 3rd Concolution Layer\n",
         "classifier.add(Convolution2D(64, (3,3) , activation = 'relu'))\n",
         "classifier.add(MaxPooling2D(pool_size =(2,2)))\n"
-      ],
-      "metadata": {
-        "id": "7JuZkiKOm56R"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Step 3 - Flattening\n",
-        "classifier.add(Flatten())"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "JyDYLHedJXub"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Step 3 - Flattening\n",
+        "classifier.add(Flatten())"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "B-7yOOgrJX1K"
+      },
+      "outputs": [],
       "source": [
         "#Step 4 - Full Connection\n",
         "classifier.add(Dense(256, activation = 'relu'))\n",
         "classifier.add(Dropout(0.4))\n",
         "classifier.add(Dense(36, activation = 'softmax')) # 36 Units are the value of no of Classes"
-      ],
-      "metadata": {
-        "id": "B-7yOOgrJX1K"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "69rRIVm9Jbr6"
+      },
+      "outputs": [],
       "source": [
         "#Compiling The CNN\n",
         "classifier.compile(\n",
         "              optimizer = 'adam',\n",
         "              loss = 'categorical_crossentropy',\n",
         "              metrics = ['accuracy'])"
-      ],
-      "metadata": {
-        "id": "69rRIVm9Jbr6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Classifier Summary\n",
-        "classifier.summary()"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "CRMql1lLgQrW",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "CRMql1lLgQrW",
         "outputId": "6b4ddfe6-3d06-4c35-fb7d-f81302eb042f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
@@ -331,10 +311,19 @@
             "_________________________________________________________________\n"
           ]
         }
+      ],
+      "source": [
+        "# Classifier Summary\n",
+        "classifier.summary()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "zcqMfgb_Jb3m"
+      },
+      "outputs": [],
       "source": [
         "#Part 2 Fittting the CNN to the image\n",
         "from keras.preprocessing.image import ImageDataGenerator\n",
@@ -343,15 +332,28 @@
         "        shear_range=0.2,\n",
         "        zoom_range=0.2,\n",
         "        horizontal_flip=True)"
-      ],
-      "metadata": {
-        "id": "zcqMfgb_Jb3m"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8NSgS7-xJfzK",
+        "outputId": "378b9baf-87ca-408f-bc84-f56bfdfbe721"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found 7605 images belonging to 36 classes.\n",
+            "Found 3330 images belonging to 36 classes.\n"
+          ]
+        }
+      ],
       "source": [
         "#Dataset Store in Variable\n",
         "test_datagen = ImageDataGenerator(rescale=1./255)\n",
@@ -369,52 +371,20 @@
         "        batch_size=32,\n",
         "        color_mode='rgb',\n",
         "        class_mode='categorical')"
-      ],
-      "metadata": {
-        "id": "8NSgS7-xJfzK",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "378b9baf-87ca-408f-bc84-f56bfdfbe721"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found 7605 images belonging to 36 classes.\n",
-            "Found 3330 images belonging to 36 classes.\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Model Initialize\n",
-        "epochs=25\n",
-        "model = classifier.fit_generator(\n",
-        "        training_set,\n",
-        "        steps_per_epoch=237,\t#No of Image in Traing Set 7605/batch size(32)=237\n",
-        "        epochs=epochs, #Previous value is 25\n",
-        "        validation_data = test_set,\n",
-        "        validation_steps =102 \t#No of Image in Test Set 3292/batch size(32)=102\n",
-        "      )"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "YBBCWpdlJf2j",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "YBBCWpdlJf2j",
         "outputId": "ff680971-927e-4782-9cdc-1fc644734357"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
           "name": "stderr",
           "output_type": "stream",
           "text": [
@@ -423,8 +393,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/25\n",
             "237/237 [==============================] - 2239s 9s/step - loss: 1.7667 - accuracy: 0.4998 - val_loss: 1.4951 - val_accuracy: 0.6029\n",
@@ -478,13 +448,42 @@
             "237/237 [==============================] - 187s 791ms/step - loss: 0.0419 - accuracy: 0.9871 - val_loss: 1.8584 - val_accuracy: 0.7390\n"
           ]
         }
+      ],
+      "source": [
+        "#Model Initialize\n",
+        "epochs=25\n",
+        "model = classifier.fit_generator(\n",
+        "        training_set,\n",
+        "        steps_per_epoch=237,\t#No of Image in Traing Set 7605/batch size(32)=237\n",
+        "        epochs=epochs, #Previous value is 25\n",
+        "        validation_data = test_set,\n",
+        "        validation_steps =102 \t#No of Image in Test Set 3292/batch size(32)=102\n",
+        "      )"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hGGDpSCnJupU",
+        "outputId": "12e9508c-e100-432e-fe3d-c15f659f5a90"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model Saved\n",
+            "dict_keys(['loss', 'accuracy', 'val_loss', 'val_accuracy'])\n"
+          ]
+        }
+      ],
       "source": [
         "#Saving the model\n",
-        "classifier.save('/content/drive/MyDrive/Data/Trained_model1.h5')\n",
+        "classifier.save('/content/drive/MyDrive/Models/Trained_model1.h5')\n",
         "\n",
         "# model_json = classifier.to_json()\n",
         "# with open(\"/content/drive/MyDrive/Data/model-bw1.json\", \"w\") as json_file:\n",
@@ -492,43 +491,20 @@
         "print('Model Saved')\n",
         "\n",
         "print(model.history.keys())"
-      ],
-      "metadata": {
-        "id": "hGGDpSCnJupU",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "12e9508c-e100-432e-fe3d-c15f659f5a90"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model Saved\n",
-            "dict_keys(['loss', 'accuracy', 'val_loss', 'val_accuracy'])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Accuracy\n",
-        "model.history['accuracy']"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "6s4PjEz9Ju5D",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "6s4PjEz9Ju5D",
         "outputId": "474f0a45-a925-4aaf-98cc-8315720f8727"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[0.4998019337654114,\n",
@@ -558,10 +534,31 @@
               " 0.9870592951774597]"
             ]
           },
+          "execution_count": 18,
           "metadata": {},
-          "execution_count": 18
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "#Accuracy\n",
+        "model.history['accuracy']"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
