--- a/marathi_module/Colab Notebooks/Sign_Language_Recognition.ipynb
+++ b/marathi_module/Colab Notebooks/Sign_Language_Recognition.ipynb
@@ -483,7 +483,7 @@
       ],
       "source": [
         "#Saving the model\n",
-        "classifier.save('/content/drive/MyDrive/Models/Trained_model1.h5')\n",
+        "classifier.save('/content/drive/MyDrive/Models/Trained_model.h5')\n",
         "\n",
         "# model_json = classifier.to_json()\n",
         "# with open(\"/content/drive/MyDrive/Data/model-bw1.json\", \"w\") as json_file:\n",
@@ -552,11 +552,18 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.8 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.8"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+      }
     }
   },
   "nbformat": 4,
