Change in CNN Model Generator ipynb

--- a/english_module/Colab Notebooks/Sign_Language_Recognition.ipynb
+++ b/english_module/Colab Notebooks/Sign_Language_Recognition.ipynb
@@ -180,7 +180,7 @@
       "outputs": [],
       "source": [
         "# Step 1 - Convolutio Layer \n",
-        "classifier.add(Convolution2D(32, (3,3) , input_shape = (sz, sz,3), activation = 'relu'))"
+        "classifier.add(Convolution2D(32, (3,3) , input_shape = (sz, sz,3), activation = 'relu', padding='same'))"
       ]
     },
     {
@@ -204,7 +204,7 @@
       "outputs": [],
       "source": [
         "# Adding second convolution layer\n",
-        "classifier.add(Convolution2D(32, (3,3) , activation = 'relu'))\n",
+        "classifier.add(Convolution2D(32, (3,3) , activation = 'relu', padding='same'))\n",
         "classifier.add(MaxPooling2D(pool_size =(2,2)))"
       ]
     },
@@ -217,7 +217,7 @@
       "outputs": [],
       "source": [
         "#Adding 3rd Concolution Layer\n",
-        "classifier.add(Convolution2D(64, (3,3) , activation = 'relu'))\n",
+        "classifier.add(Convolution2D(64, (3,3) , activation = 'relu', padding='same'))\n",
         "classifier.add(MaxPooling2D(pool_size =(2,2)))\n"
       ]
     },
