Change Model path

--- a/communication_module/Colab Notebooks/Comunication_model_trainer.ipynb
+++ b/communication_module/Colab Notebooks/Comunication_model_trainer.ipynb
@@ -864,7 +864,7 @@
     }
    ],
    "source": [
-    "model.save('action.h5')"
+    "model.save('communication_module/Model/Communication.h5')"
    ]
   },
   {
@@ -894,7 +894,7 @@
     }
    ],
    "source": [
-    "model.load_weights('action.h5')"
+    "model.load_weights('communication_module/Model/Communication.h5')"
    ]
   },
   {
@@ -1481,7 +1481,7 @@
     "predictions = []\n",
     "threshold = 0.5\n",
     "\n",
-    "model = keras.models.load_model('action.h5',compile=False)\n",
+    "model = keras.models.load_model('communication_module/Model/Communication.h5',compile=False)\n",
     "\n",
     "cap = cv2.VideoCapture(0)\n",
     "# Set mediapipe model \n",
