Change in Code For grayscale

--- a/english_module/Colab Notebooks/Sign_Language_Recognition.ipynb
+++ b/english_module/Colab Notebooks/Sign_Language_Recognition.ipynb
@@ -183,7 +183,7 @@
       "outputs": [],
       "source": [
         "# Step 1 - Convolutio Layer \n",
-        "classifier.add(Convolution2D(32, (3,3) , input_shape = (sz, sz,3), activation = 'relu', padding='same'))"
+        "classifier.add(Convolution2D(32, (3,3) , input_shape = (sz, sz,1), activation = 'relu', padding='same'))"
       ]
     },
     {
@@ -365,14 +365,14 @@
         "        '/content/drive/MyDrive/Data/train',\n",
         "        target_size=(sz, sz),\n",
         "        batch_size=32,\n",
-        "        color_mode='rgb',\n",
+        "        color_mode='grayscale',\n",
         "        class_mode='categorical')\n",
         "\n",
         "test_set = test_datagen.flow_from_directory(\n",
         "        '/content/drive/MyDrive/Data/test',\n",
         "        target_size=(sz, sz),\n",
         "        batch_size=32,\n",
-        "        color_mode='rgb',\n",
+        "        color_mode='grayscale',\n",
         "        class_mode='categorical')"
       ]
     },
@@ -431,10 +431,10 @@
         "epochs=25\n",
         "model = classifier.fit_generator(\n",
         "        training_set,\n",
-        "        steps_per_epoch=225,\t#No of Image in Traing Set 7200/batch size(32)=225\n",
+        "        steps_per_epoch=337,\t#No of Image in Traing Set 7200/batch size(32)=225\n",
         "        epochs=epochs, #Previous value is 25\n",
         "        validation_data = test_set,\n",
-        "        validation_steps =56 \t#No of Image in Test Set 1800/batch size(32)=56\n",
+        "        validation_steps =78 \t#No of Image in Test Set 1800/batch size(32)=56\n",
         "      )"
       ]
     },
@@ -447,7 +447,7 @@
       "outputs": [],
       "source": [
         "#Saving the model\n",
-        "classifier.save('/content/drive/MyDrive/Models/Trained_model.h5')\n",
+        "classifier.save('/Models/Trained_model.h5')\n",
         "\n",
         "# model_json = classifier.to_json()\n",
         "# with open(\"/content/drive/MyDrive/Data/model-bw1.json\", \"w\") as json_file:\n",
