--- a/marathi_module/Colab Notebooks/Sign_Language_Recognition.ipynb
+++ b/marathi_module/Colab Notebooks/Sign_Language_Recognition.ipynb
@@ -180,7 +180,7 @@
       "outputs": [],
       "source": [
         "# Step 1 - Convolutio Layer \n",
-        "classifier.add(Convolution2D(32, (3,3) , input_shape = (sz, sz,3), activation = 'relu', padding='same'))"
+        "classifier.add(Convolution2D(32, (3,3) , input_shape = (sz, sz,1), activation = 'relu', padding='same'))"
       ]
     },
     {
@@ -244,7 +244,7 @@
         "#Step 4 - Full Connection\n",
         "classifier.add(Dense(256, activation = 'relu'))\n",
         "classifier.add(Dropout(0.4))\n",
-        "classifier.add(Dense(36, activation = 'softmax')) # 36 Units are the value of no of Classes"
+        "classifier.add(Dense(35, activation = 'softmax')) # 35 Units are the value of no of Classes"
       ]
     },
     {
@@ -362,14 +362,14 @@
         "        '/content/drive/MyDrive/Data/train',\n",
         "        target_size=(sz, sz),\n",
         "        batch_size=32,\n",
-        "        color_mode='rgb',\n",
+        "        color_mode='grayscale',\n",
         "        class_mode='categorical')\n",
         "\n",
         "test_set = test_datagen.flow_from_directory(\n",
         "        '/content/drive/MyDrive/Data/test',\n",
         "        target_size=(sz, sz),\n",
         "        batch_size=32,\n",
-        "        color_mode='rgb',\n",
+        "        color_mode='grayscale',\n",
         "        class_mode='categorical')"
       ]
     },
@@ -454,10 +454,10 @@
         "epochs=25\n",
         "model = classifier.fit_generator(\n",
         "        training_set,\n",
-        "        steps_per_epoch=218,\t#No of Image in Traing Set 7000/batch size(32)=218\n",
+        "        steps_per_epoch=330,\t#No of Image in Traing Set 7000/batch size(32)=218\n",
         "        epochs=epochs, #Previous value is 25\n",
         "        validation_data = test_set,\n",
-        "        validation_steps =54 \t#No of Image in Test Set 1750/batch size(32)=54\n",
+        "        validation_steps =76 \t#No of Image in Test Set 1750/batch size(32)=54\n",
         "      )"
       ]
     },
@@ -483,7 +483,7 @@
       ],
       "source": [
         "#Saving the model\n",
-        "classifier.save('/content/drive/MyDrive/Models/Trained_model.h5')\n",
+        "classifier.save('/Models/Trained_model.h5')\n",
         "\n",
         "# model_json = classifier.to_json()\n",
         "# with open(\"/content/drive/MyDrive/Data/model-bw1.json\", \"w\") as json_file:\n",
